Refonte du clustering des situations + récupération des situations ranges avec StacksEffectifs